css/main.css
/* html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
} */

.large-header {
  position: relative;
  width: 100%;
  height: 80vh;
  background: #111;
  overflow: hidden;
  background-size: cover;
  background-position: center center;
  z-index: 1;
}

.demo .large-header {
  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg");
}

.main-title {
  position: absolute;
  margin: 0;
  padding: 0;
  color: #f9f1e9;
  text-align: center;
  top: 50%;
  left: 50%;
  -webkit-transform: translate3d(-50%, -50%, 0);
  transform: translate3d(-50%, -50%, 0);
}

.demo .main-title {
  text-transform: uppercase;
  font-size: 4.2em;
  letter-spacing: 0.1em;
}

.main-title .thin {
  font-weight: 200;
}

@media only screen and (max-width: 768px) {
  .demo .main-title {
    font-size: 3em;
  }
}

html {
  scroll-behavior: smooth;
}

#demo-canvas {
  max-width: 100vw !important;
}

section {
  height: 80vh;
  min-height: 590px;
  border-top: 1px white solid;
  border-bottom: 1px white solid;
  border: 1px solid orange;
}

body {
  background-position: center; /* Center the image */
  background-size: cover;
  background-color: black;
  color: white;
  margin-left: 76px;
  max-width: calc(100vw - 76px);
}

.welcome {
  /* overflow: hidden; */
  margin-left: -75px;
}

.sidebar {
  position: fixed;
  top: 0;
  left: 0;
  overflow-x: hidden;
  z-index: 1000;
  height: 100vh;
  width: 75px;
  /* background-color: white; */
  background-color: rgb(255, 255, 255, 0.2);
  border: none;

  /* display: none; */
}

.sidebar-icons {
  margin-top: 55px;
}

.sidebar a {
  display: block;
  height: 50px;
  width: 50px;
  background-size: 90%;
  background-position: center;
  background-repeat: no-repeat;
  margin: 35px auto;
}

.about-icon {
  background: url("../img/icons/about-icon-white.png")
}

.projects-icon {
  background: url("../img/icons/projects-icon-white.png")
}

.links-icon {
  background: url("../img/icons/links-icon-white.png")
}

.contact-icon {
  background: url("../img/icons/contact-icon-white.png")
}

.welcome-icon {
  background: url("../img/icons/welcome-icon-white.png")
}


.about,
.projects,
.boring-stuff,
.contact {
  display: flex;
  padding: 6%;
  flex-wrap: wrap;
}

.about {
}

.about-text {
  margin-left: 10%;
  max-width: 50%;
}

.headshot {
  background-image: url("../img/headshot.png");
  background-position: 50% 38%; /* Center the image */
  background-size: 135%;
  height: 30vw;
  width: 30vw;
  border-radius: 50%;
  margin-top: 3%;
}

.technologies {
  display: flex;
  flex-wrap: wrap;
}

.technologies h3 {
  width: 50vw;
}

.technologies-logos {
  display: flex;
  width: 100%;
  justify-content: space-between;
}

.technologies img {
  height: 50px;
  width: 50px;
}

.projects {
  flex-direction: column;
}

.projects h1 {
  width: 100%;
  display: inline-block;
}

.project-screenshots {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  flex-wrap: wrap;
}

.project-screenshots img {
  width: 27vw;
  height: auto;
  margin-top: 30px;
}

.boring-stuff h1 {
  display: inline-block;
  width: 100%;
}

.boring-stuff .links {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  width: 100%;
}

.boring-stuff .links img {
  height: 15vw;
  width: 15vw;
  border-radius: 7%;
}


/* Parallax Images */
.parallax-1, .parallax-2, .parallax-3, .parallax-4 {
  position: relative;
  opacity: 0.80;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 550px;
  width: 100vw;
  margin-left: -75px;
}

.parallax-1 {
  background-image: url(../img/parallax/pillars_of_creation.jpg);
  /* min-height: 550px; */
}

.parallax-2 {
  background-image: url(../img/parallax/milky_way.jpg);
  /* min-height: 550px; */
}

.parallax-3 {
  background-image: url(../img/parallax/bubble_nebula.jpg);
  /* min-height: 550px; */
}

.parallax-4 {
  background-image: url(../img/parallax/m57.jpg);
  /* min-height: 550px; */
}

#####################
  Clear
  Fix
  #####################
  #####################
  Clear
  Fix
  #####################
  #####################
  Clear
  Fix
  #####################
  #####################
  Clear
  Fix
  #####################
  .clearfix:after {
  content: ".";

  display: block;

  clear: both;

  visibility: hidden;

  line-height: 0;

  height: 0;
}

.clearfix {
  display: inline-block;
}

html[xmlns] .clearfix {
  display: block;
}

* html .clearfix {
  height: 0%;
}

